--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,9 @@ h1 {
   @media only screen and (max-width: 768px) {
     .info {
       padding: 2vh; } }
+  @media only screen and (min-width: 1700px) {
+    .info {
+      max-width: 70%; } }
   .info__center {
     display: flex;
     flex-direction: column;
@@ -179,4 +182,8 @@ h1 {
   width: 100%;
   height: 50vh;
   background: url(../images/grass.svg) repeat-x;
-  background-position: bottom left; }
+  background-position: bottom left;
+  background-size: contain; }
+  @media only screen and (max-width: 1100px) {
+    .footer {
+      height: 25vh; } }
