--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -225,6 +225,9 @@ h1 {
   @include phablet {
     padding: 2vh;
   }
+  @include large {
+    max-width: 70%;
+  }
 
   &__center {
     display: flex;
@@ -237,6 +240,9 @@ h1 {
   width: 100%;
   height: 50vh;
   background: url(../images/grass.svg) repeat-x;
-  // background-size: cover;
   background-position: bottom left;
+  background-size: contain;
+  @include tablet {
+    height: 25vh;
+  }
 }
