--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,18 @@ body {
     .title {
       font-size: 1.75em; } }
 
+.subtitle {
+  display: flex;
+  align-items: center;
+  gap: 1vh;
+  font-size: 1.2em;
+  color: #000000;
+  font-weight: 500;
+  line-height: 1.2; }
+  @media only screen and (max-width: 1100px) {
+    .subtitle {
+      font-size: 1.5em; } }
+
 .text {
   font-size: 1.1em;
   color: #000000;
@@ -105,6 +117,24 @@ body {
   .text span {
     padding: 0 6px;
     font-weight: 700; }
+
+.btn {
+  display: inline-block;
+  padding: 1.5vh 3vh;
+  margin: 3vh auto;
+  text-align: center;
+  font-size: 1.1em;
+  color: #fff;
+  font-weight: 400;
+  line-height: 1.4;
+  background-color: #495d47;
+  border-radius: 1vh;
+  cursor: pointer;
+  transition: 0.3s ease-in-out; }
+  .btn-wrap {
+    text-align: center; }
+  .btn:hover, .btn:active {
+    background-color: #4f473c; }
 
 h1 {
   padding: 4vh 0 8vh;
@@ -147,13 +177,39 @@ h1 {
         gap: 2vh; } }
   .block__img {
     width: 100%;
-    height: 250px;
+    height: 200px;
     object-fit: cover;
     border-radius: 2vh;
     border: 3px solid #4f473c; }
     @media only screen and (min-width: 1700px) {
       .block__img {
-        height: 30vh; } }
+        height: 25vh; } }
+  .block__label {
+    display: inline;
+    padding: 1vh;
+    background-color: rgba(73, 93, 71, 0.1);
+    border: 1px solid rgba(73, 93, 71, 0.3);
+    border-radius: 1vh;
+    font-size: 0.8em;
+    font-weight: 400; }
+  .block__input {
+    position: relative;
+    padding: 1vh;
+    background-color: transparent;
+    width: fit-content;
+    border: 1px solid rgba(73, 93, 71, 0.5);
+    border-radius: 1vh;
+    transition: 0.3s ease-in-out; }
+    .block__input::-webkit-calendar-picker-indicator {
+      position: absolute;
+      top: 50%;
+      right: 3%;
+      transform: translateY(-50%);
+      width: 10%;
+      text-align: right;
+      padding-left: 70%;
+      background-color: transparent;
+      z-index: 2; }
 
 .info {
   display: flex;
