--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@ $ivory: #ede8e1;
 $dark: #000000;
 $white: #fff;
 $brown: #4f473c;
+$green: #495d47;
 $large-screen-width: 1700px;
 $tablet-screen-width: 1100px;
 $phablet-screen-width: 768px;
@@ -148,11 +149,41 @@ body {
     font-size: 1.75em;
   }
 }
+.subtitle {
+  display: flex;
+  align-items: center;
+  gap: 1vh;
+  @include font(1.2em, $dark, 500, 1.2);
+  @include tablet {
+    font-size: 1.5em;
+  }
+}
+
 .text {
   @include font(1.1em, $dark, 400, 1.4);
   & span {
     padding: 0 6px;
     font-weight: 700;
+  }
+}
+.btn {
+  display: inline-block;
+  padding: 1.5vh 3vh;
+  margin: 3vh auto;
+  text-align: center;
+  @include font(1.1em, $white, 400, 1.4);
+  background-color: $green;
+  border-radius: 1vh;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+
+  &-wrap {
+    text-align: center;
+  }
+
+  &:hover,
+  &:active {
+    background-color: $brown;
   }
 }
 h1 {
@@ -200,12 +231,48 @@ h1 {
   }
   &__img {
     width: 100%;
-    height: 250px;
+    height: 200px;
     object-fit: cover;
     border-radius: 2vh;
     border: 3px solid $brown;
+
     @include large {
-      height: 30vh;
+      height: 25vh;
+    }
+  }
+  &__label {
+    display: inline;
+    padding: 1vh;
+    background-color: rgba($green, 0.1);
+    border: 1px solid rgba($green, 0.3);
+    border-radius: 1vh;
+    font-size: 0.8em;
+    font-weight: 400;
+  }
+
+  &__input {
+    position: relative;
+    padding: 1vh;
+    background-color: transparent;
+    width: fit-content;
+    border: 1px solid rgba($green, 0.5);
+    border-radius: 1vh;
+    transition: 0.3s ease-in-out;
+
+    &::-webkit-calendar-picker-indicator {
+      position: absolute;
+      top: 50%;
+      right: 3%;
+      transform: translateY(-50%);
+      width: 10%;
+      // height: 70%;
+      text-align: right;
+      padding-left: 70%;
+      background-color: transparent;
+      z-index: 2;
+      // padding-left: 70%;
+    }
+    &::placeholder {
     }
   }
 }
