update plants info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,13 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 ul[class],
 ol[class] {
-  padding: 0; }
+  padding: 0;
+}
 
 body,
 h1,
@@ -24,22 +26,27 @@ figcaption,
 blockquote,
 dl,
 dd {
-  margin: 0; }
+  margin: 0;
+}
 
 ul[class],
 ol[class] {
-  list-style: none; }
+  list-style: none;
+}
 
 a:not([class]) {
-  text-decoration-skip-ink: auto; }
+  text-decoration-skip-ink: auto;
+}
 
 a {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
 img {
   max-width: 100%;
-  display: block; }
+  display: block;
+}
 
 input,
 button,
@@ -51,51 +58,69 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 @media (prefers-reduced-motion: reduce) {
   * {
     animation-duration: 0.01ms !important;
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important; } }
+    scroll-behavior: auto !important;
+  }
+}
 
 * {
-  font-family: "Unbounded", cursive; }
+  font-family: "Unbounded", cursive;
+}
 
 body {
   background-color: #ede8e1;
-  font-size: 1.15vw; }
-  @media only screen and (max-width: 1100px) {
-    body {
-      font-size: 16px; } }
-  @media only screen and (min-width: 1700px) {
-    body {
-      font-size: 1.05vw; } }
+  font-size: 1.15vw;
+}
+@media only screen and (max-width: 1100px) {
+  body {
+    font-size: 16px;
+  }
+}
+@media only screen and (min-width: 1700px) {
+  body {
+    font-size: 1.05vw;
+  }
+}
 
 .section {
-  width: 100%; }
+  width: 100%;
+}
 
 .container {
   width: 100%;
   max-width: 1320px;
   margin: 0 auto;
-  padding: 0 1vw; }
-  @media only screen and (max-width: 1100px) {
-    .container {
-      padding: 0 16px; } }
-  @media only screen and (min-width: 1700px) {
-    .container {
-      max-width: 80%; } }
+  padding: 0 1vw;
+}
+@media only screen and (max-width: 1100px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+@media only screen and (min-width: 1700px) {
+  .container {
+    max-width: 80%;
+  }
+}
 
 .title {
   font-size: 2em;
   color: #000000;
   font-weight: 700;
-  line-height: 1.2; }
-  @media only screen and (max-width: 1100px) {
-    .title {
-      font-size: 1.75em; } }
+  line-height: 1.2;
+}
+@media only screen and (max-width: 1100px) {
+  .title {
+    font-size: 1.75em;
+  }
+}
 
 .subtitle {
   display: flex;
@@ -104,19 +129,24 @@ body {
   font-size: 1.2em;
   color: #000000;
   font-weight: 500;
-  line-height: 1.2; }
-  @media only screen and (max-width: 1100px) {
-    .subtitle {
-      font-size: 1.5em; } }
+  line-height: 1.2;
+}
+@media only screen and (max-width: 1100px) {
+  .subtitle {
+    font-size: 1.5em;
+  }
+}
 
 .text {
   font-size: 1.1em;
   color: #000000;
   font-weight: 400;
-  line-height: 1.4; }
-  .text span {
-    padding: 0 6px;
-    font-weight: 700; }
+  line-height: 1.4;
+}
+.text span {
+  padding: 0 6px;
+  font-weight: 700;
+}
 
 .btn {
   display: inline-block;
@@ -130,11 +160,15 @@ body {
   background-color: #495d47;
   border-radius: 1vh;
   cursor: pointer;
-  transition: 0.3s ease-in-out; }
-  .btn-wrap {
-    text-align: center; }
-  .btn:hover, .btn:active {
-    background-color: #4f473c; }
+  transition: 0.3s ease-in-out;
+}
+.btn-wrap {
+  text-align: center;
+}
+.btn:hover,
+.btn:active {
+  background-color: #4f473c;
+}
 
 h1 {
   padding: 4vh 0 8vh;
@@ -142,74 +176,93 @@ h1 {
   color: #000000;
   font-weight: 700;
   line-height: 1.4;
-  text-align: center; }
-  @media only screen and (max-width: 1100px) {
-    h1 {
-      font-size: 2.5em; } }
+  text-align: center;
+}
+@media only screen and (max-width: 1100px) {
+  h1 {
+    font-size: 2.5em;
+  }
+}
 
 .block {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 2vh;
   padding: 4vh 2vh;
-  border-bottom: 1px solid rgba(79, 71, 60, 0.5); }
-  @media only screen and (max-width: 1100px) {
-    .block {
-      padding: 2vh 0;
-      grid-template-columns: 1fr 1fr; } }
-  @media only screen and (max-width: 500px) {
-    .block {
-      padding: 2vh 0;
-      grid-template-columns: 1fr; } }
-  .block:last-child {
-    border-bottom: none; }
-  .block__info {
-    display: flex;
-    flex-direction: column;
-    gap: 2vh; }
+  border-bottom: 1px solid rgba(79, 71, 60, 0.5);
+}
+@media only screen and (max-width: 1100px) {
+  .block {
+    padding: 2vh 0;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .block {
+    padding: 2vh 0;
+    grid-template-columns: 1fr;
+  }
+}
+.block:last-child {
+  border-bottom: none;
+}
+.block__info {
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+}
+.block__images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1vh;
+}
+@media only screen and (max-width: 500px) {
   .block__images {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1vh; }
-    @media only screen and (max-width: 500px) {
-      .block__images {
-        grid-template-columns: 1fr;
-        gap: 2vh; } }
+    grid-template-columns: 1fr;
+    gap: 2vh;
+  }
+}
+.block__img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 2vh;
+  border: 3px solid #4f473c;
+}
+@media only screen and (min-width: 1700px) {
   .block__img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 2vh;
-    border: 3px solid #4f473c; }
-    @media only screen and (min-width: 1700px) {
-      .block__img {
-        height: 25vh; } }
-  .block__label {
-    display: inline;
-    padding: 1vh;
-    background-color: rgba(73, 93, 71, 0.1);
-    border: 1px solid rgba(73, 93, 71, 0.3);
-    border-radius: 1vh;
-    font-size: 0.8em;
-    font-weight: 400; }
-  .block__input {
-    position: relative;
-    padding: 1vh;
-    background-color: transparent;
-    width: fit-content;
-    border: 1px solid rgba(73, 93, 71, 0.5);
-    border-radius: 1vh;
-    transition: 0.3s ease-in-out; }
-    .block__input::-webkit-calendar-picker-indicator {
-      position: absolute;
-      top: 50%;
-      right: 3%;
-      transform: translateY(-50%);
-      width: 10%;
-      text-align: right;
-      padding-left: 70%;
-      background-color: transparent;
-      z-index: 2; }
+    height: 25vh;
+  }
+}
+.block__label {
+  display: inline;
+  padding: 1vh;
+  background-color: rgba(73, 93, 71, 0.1);
+  border: 1px solid rgba(73, 93, 71, 0.3);
+  border-radius: 1vh;
+  font-size: 0.8em;
+  font-weight: 400;
+}
+.block__input {
+  position: relative;
+  padding: 1vh;
+  background-color: transparent;
+  width: fit-content;
+  border: 1px solid rgba(73, 93, 71, 0.5);
+  border-radius: 1vh;
+  transition: 0.3s ease-in-out;
+}
+.block__input::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 50%;
+  right: 3%;
+  transform: translateY(-50%);
+  width: 10%;
+  text-align: right;
+  padding-left: 70%;
+  background-color: transparent;
+  z-index: 2;
+}
 
 .info {
   display: flex;
@@ -221,25 +274,43 @@ h1 {
   padding: 4vh;
   border-radius: 3vh;
   border: 1px solid #4f473c;
-  box-shadow: 0px 0px 10px 0px rgba(79, 71, 60, 0.2); }
-  @media only screen and (max-width: 768px) {
-    .info {
-      padding: 2vh; } }
-  @media only screen and (min-width: 1700px) {
-    .info {
-      max-width: 70%; } }
-  .info__center {
-    display: flex;
-    flex-direction: column;
-    gap: 2vh;
-    text-align: center; }
+  box-shadow: 0px 0px 10px 0px rgba(79, 71, 60, 0.2);
+}
+@media only screen and (max-width: 768px) {
+  .info {
+    padding: 2vh;
+  }
+}
+@media only screen and (min-width: 1700px) {
+  .info {
+    max-width: 70%;
+  }
+}
+.info__center {
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+  text-align: center;
+}
 
 .footer {
   width: 100%;
   height: 50vh;
   background: url(../images/grass.svg) repeat-x;
   background-position: bottom left;
-  background-size: contain; }
-  @media only screen and (max-width: 1100px) {
-    .footer {
-      height: 25vh; } }
+  background-size: contain;
+}
+@media only screen and (max-width: 1100px) {
+  .footer {
+    height: 25vh;
+  }
+}
+
+.ShellTabsAccessories {
+  display: flex !important;
+  flex-direction: column-reverse;
+}
+.ShellTabsAccessories .ShellAccessories.Vertical,
+.ShellTabsAccessories .ShellItemTabs {
+  width: 100% !important;
+}
