add new plants, fav

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,14 +133,14 @@ body {
 }
 .container {
   width: 100%;
-  max-width: 1320px;
+  max-width: 1020px;
   margin: 0 auto;
   padding: 0 1vw;
   @include tablet {
     padding: 0 16px;
   }
   @include large {
-    max-width: 80%;
+    max-width: 70%;
   }
 }
 .title {
@@ -153,10 +153,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1vh;
-  @include font(1.2em, $dark, 500, 1.2);
-  @include tablet {
-    font-size: 1.5em;
-  }
+  @include font(1em, $dark, 500, 1.2);
 }
 
 .text {
@@ -243,11 +240,15 @@ h1 {
   &__label {
     display: inline;
     padding: 1vh;
-    background-color: rgba($green, 0.1);
-    border: 1px solid rgba($green, 0.3);
+    background-color: rgba($green, 0.05);
+    border: 1px solid rgba($green, 0.1);
     border-radius: 1vh;
-    font-size: 0.8em;
+    font-size: 0.75em;
     font-weight: 400;
+
+    @include tablet {
+      font-size: 0.6em;
+    }
   }
 
   &__input {
@@ -258,6 +259,7 @@ h1 {
     border: 1px solid rgba($green, 0.5);
     border-radius: 1vh;
     transition: 0.3s ease-in-out;
+    font-size: 0.8em;
 
     &::-webkit-calendar-picker-indicator {
       position: absolute;
@@ -268,11 +270,18 @@ h1 {
       // height: 70%;
       text-align: right;
       padding-left: 70%;
+
       background-color: transparent;
+      cursor: pointer;
       z-index: 2;
       // padding-left: 70%;
     }
     &::placeholder {
+    }
+
+    &:hover,
+    &:active {
+      // background: #999;
     }
   }
 }
@@ -311,16 +320,5 @@ h1 {
   background-size: contain;
   @include tablet {
     height: 25vh;
-  }
-}
-
-//leisure
-.ShellTabsAccessories {
-  display: flex !important;
-  flex-direction: column-reverse;
-
-  & .ShellAccessories.Vertical,
-  & .ShellItemTabs {
-    width: 100% !important;
   }
 }
